Fixed navigation on mobile

--- a/css/doc.css
+++ b/css/doc.css
@@ -84,6 +84,8 @@ nav {
     background-color: rgb(62, 120, 118);
     width: 100%;
     height: 30pt;
+    position: fixed;
+    z-index: 2;
   }
 
   /* from https://codyhouse.co/gem/responsive-sidebar-navigation/ */
@@ -186,10 +188,11 @@ aside {
   aside {
     opacity: 0;
     visibility: hidden;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 30pt;
     width: 100%;
+    overflow: scroll;
     transition: opacity 0.2s 0s, visibility 0s 0.2s;
   }
 
